--- a/app/src/main/res/layout-night/activity_profile.xml
+++ b/app/src/main/res/layout-night/activity_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/top_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/view_color"
+        android:background="@color/view_color_night"
         app:layout_constraintBottom_toTopOf="@id/bottom_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_weight="0.5" />
@@ -20,7 +20,7 @@
         android:id="@+id/bottom_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/white"
+        android:background="@color/view_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_view"
         app:layout_constraintVertical_weight="0.5" />
@@ -59,7 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/settings"
-        android:textColor="@color/main_text_color"
+        android:textColor="@color/main_text_color_night"
         android:textSize="@dimen/profile_settings_text_size"
 
         app:layout_constraintEnd_toEndOf="@id/content_end"
@@ -68,15 +68,16 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageview_profile_photo"
-        android:layout_width="@dimen/profile_photo_size_land"
-        android:layout_height="@dimen/profile_photo_size_land"
+        android:layout_width="@dimen/profile_photo_size"
+        android:layout_height="@dimen/profile_photo_size"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margin_big"
         android:src="@drawable/profile_photo"
         app:layout_constraintBottom_toTopOf="@id/textview_profile_name"
 
         app:layout_constraintEnd_toEndOf="@id/content_end"
         app:layout_constraintStart_toStartOf="@id/content_start"
-        app:layout_constraintTop_toTopOf="@id/content_top"
+        app:layout_constraintTop_toBottomOf="@id/textview_settings"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintVertical_chainStyle="packed"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
@@ -87,9 +88,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_medium"
         android:text="@string/name_surname"
-        android:textColor="@color/main_text_color"
+        android:textColor="@color/main_text_color_night"
         android:textSize="@dimen/profile_name_text_size"
 
         app:layout_constraintBottom_toTopOf="@id/textview_career"
@@ -105,7 +106,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/career"
-        android:textColor="@color/gray_text"
+        android:textColor="@color/gray_text_night"
         android:textSize="@dimen/profile_career_text_size"
 
         app:layout_constraintBottom_toTopOf="@+id/textview_address"
@@ -121,7 +122,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/home_address"
-        android:textColor="@color/gray_text"
+        android:textColor="@color/gray_text_night"
         android:textSize="@dimen/profile_address_text_size"
 
         app:layout_constraintBottom_toBottomOf="@id/top_view"
@@ -141,7 +142,7 @@
         app:layout_constraintBottom_toTopOf="@id/textview_fill_out_profile"
         app:layout_constraintEnd_toEndOf="@id/content_end"
         app:layout_constraintStart_toStartOf="@id/content_start"
-        app:layout_constraintTop_toBottomOf="@id/top_view" />
+        app:layout_constraintTop_toBottomOf="@id/top_view"/>
 
     <ImageView
         android:id="@+id/imageview_facebook"
@@ -150,78 +151,74 @@
         android:contentDescription="@string/facebook_icon"
         android:focusable="true"
 
-        app:srcCompat="@drawable/facebook_icon_vector"
+        app:srcCompat="@drawable/facebook_icon_vector_night"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageview_linked_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/linkedin_icon"
+        app:srcCompat="@drawable/linked_in_icon_vector_night"
 
-        app:srcCompat="@drawable/linked_in_icon_vector"
+        android:contentDescription="@string/linkedin_icon"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageview_instagram"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/instagram_icon"
+        app:srcCompat="@drawable/instagram_icon_vector_night"
 
-        app:srcCompat="@drawable/instagram_icon_vector"
+        android:contentDescription="@string/instagram_icon"
         tools:ignore="MissingConstraints" />
+
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/flow_textview_sign_in"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:constraint_referenced_ids="textview_fill_out_profile, button_edit_profile, button_view_contacts"
+        app:flow_verticalGap="@dimen/profile_button_gap"
+        app:flow_verticalStyle="packed"
+
+        app:layout_constraintBottom_toBottomOf="@id/content_bottom"
+        app:layout_constraintEnd_toEndOf="@id/content_end"
+        app:layout_constraintStart_toStartOf="@id/content_start" />
 
     <TextView
         android:id="@+id/textview_fill_out_profile"
         style="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_medium"
         android:gravity="center_horizontal"
         android:text="@string/go_to_settings_and_fill_out_the_profile"
-        android:textColor="@color/black"
-        android:textSize="@dimen/profile_go_to_settings_text_size"
-
-        app:layout_constraintBottom_toTopOf="@id/button_flow"
-        app:layout_constraintEnd_toEndOf="@id/content_end"
-        app:layout_constraintStart_toStartOf="@id/content_start" />
-
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/button_flow"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_large"
-        android:orientation="horizontal"
-        app:constraint_referenced_ids="button_edit_profile, button_view_contacts"
-        app:flow_horizontalGap="@dimen/margin_large"
-        app:flow_horizontalStyle="packed"
-
-        app:layout_constraintBottom_toBottomOf="@id/content_bottom"
-        app:layout_constraintEnd_toEndOf="@id/content_end"
-        app:layout_constraintStart_toStartOf="@id/content_start" />
+        android:textColor="@color/main_text_color_night"
+        android:textSize="@dimen/profile_go_to_settings_text_size" />
 
     <Button
         android:id="@+id/button_edit_profile"
         style="@style/edit_profile_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/white"
-        app:strokeColor="@color/view_color"
-        app:strokeWidth="@dimen/profile_edit_profile_stroke_width" />
+
+        android:textColor="@color/gray_text_night"
+        android:backgroundTint="@android:color/transparent"
+        app:strokeColor="@color/gray_text_night"
+        app:strokeWidth="@dimen/profile_edit_profile_stroke_width"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button_view_contacts"
         style="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/orange_night"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:paddingVertical="@dimen/profile_button_padding"
         android:text="@string/view_my_contacts"
-        android:textColor="@color/main_text_color"
+        android:textColor="@color/main_text_color_night"
         android:textSize="@dimen/profile_button_text_size"
-        app:cornerRadius="@dimen/profile_view_contacts_corner_radius"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
