--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,33 +3,32 @@
 
     <style name="open_sans_font">
         <item name="android:fontFamily">@font/open_sans_regular</item>
-        <item name="android:textFontWeight" >600</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
-    <style name="edit_profile_btn">
-        <item name="android:text">Edit profile</item>
+
+    <style name="edit_profile_btn" parent="open_sans_font">
+        <item name="android:text">@string/edit_profile</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:fontFamily">@font/open_sans_regular</item>
-        <item name="android:textFontWeight">600</item>
-        <item name="android:textSize">@dimen/edit_profile_text_size</item>
-        <item name="android:layout_marginHorizontal">@dimen/edit_profile_margin_horizontal</item>
-        <item name="android:layout_marginBottom">@dimen/edit_profile_margin_bottom</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textSize">@dimen/profile_button_text_size</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetRight">0dp</item>
         <item name="android:insetBottom">0dp</item>
     </style>
 
+
     <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
         <item name="cornerSize">50%</item>
     </style>
+
 
     <style name="TextColor" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">@color/gray_edit_text</item>
         <item name="colorControlActivated">@color/gray_edit_text</item>
     </style>
+
 
     <style name="edit_text_auth_activity">
         <item name="android:hint">@string/email</item>
@@ -37,10 +36,9 @@
         <item name="barrierDirection">bottom</item>
         <item name="hintAnimationEnabled">@string/email</item>
         <item name="hintEnabled">true</item>
-        <item name="hintTextColor">#BDBDBD</item>
+        <item name="hintTextColor">@color/gray_edit_text</item>
         <item name="expandedHintEnabled">true</item>
-        <item name="android:textColorHint">#BDBDBD</item>
-        <item name="android:layout_marginHorizontal">16dp</item>
+        <item name="android:textColorHint">@color/gray_edit_text</item>
         <item name="boxBackgroundMode">none</item>
     </style>
 
